Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9545

report inconsistent instead of "fixed" for LFSCK dry runs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.8.0, Lustre 2.9.0, Lustre 2.10.0
    • None
    • Any lustre server that runs lfsck in dryrun mode.
    • 3
    • 9223372036854775807

      Under the 'dryrun' mode, the "fixed" items in the LFSCK output does not means real fix, instead, it means the found inconsistent items. It would be more clear for users if "repaired" only indicated actual fixed items, and there be a separate field accounting the errors found.

            yong.fan nasf (Inactive)
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: